option('enable-dep11', type : 'boolean', value : true, description : 'enable DEP-11')
option('enable-builder', type : 'boolean', value : true, description : 'enable AppStream builder')
option('enable-rpm', type : 'boolean', value : true, description : 'enable RPM support')
option('enable-alpm', type : 'boolean', value : false, description : 'enable ALPM support')
option('enable-fonts', type : 'boolean', value : true, description : 'enable font support')
option('enable-stemmer', type : 'boolean', value : true, description : 'enable stemmer support')
option('enable-man', type : 'boolean', value : true, description : 'generate man pages')
option('enable-gtk-doc', type : 'boolean', value : false, description : 'generate API reference')
option('enable-introspection', type : 'boolean', value : true, description : 'generate GObject Introspection data')
